<resources>
    <string name="app_name">For Deep Sleep</string>
    <string name="app_alarm_page">알람 목록</string>

    <string name="action_exist_alarm">알람목록 확인</string>
    <string name="action_empty_alarm">알람 없음</string>

    <string name="title_time_picker">언제 잘 예정인가요?</string>
    <string name="title_period">얼마큼 잘건가요?</string>
    <string name="title_alarm">알람음</string>
    <string name="title_volume">음량</string>
    <string name="title_vibration">진동</string>

    <string name="btn_right_now">지금 당장!</string>
    <string name="btn_add_10min">+10분</string>
    <string name="btn_add_30min">+30분</string>
    <string name="btn_add_1hour">+1시간</string>
    <string name="btn_save">저장</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_delete">삭제</string>
    <string name="btn_finish">종료</string>

    <string name="sample_option">시간을 선택해주세요.</string>
    <string name="sample_alarm">default 알람음</string>
    <string name="sample_volume">00</string>
    <string name="sample_vibration">default 진동</string>

    <string name="dialog_title">사용 전 초기 설정</string>
    <string name="dialog_content">일부 버전에서는 정상적인 작동을 위해 \"다른 앱 위에 표시\"를 허용해주시고 \"배터리 최적화\"를 제외해주시기 바랍니다.</string>
    <string name="dialog_set_settings">설정하러 가기</string>
    <string name="dialog_check">확인</string>
</resources>